Scoring service added.

--- a/lstm_glove.ipynb
+++ b/lstm_glove.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import numpy as np\n",
@@ -440,6 +432,61 @@
    ],
    "source": [
     "print(classification_report(y_test.argmax(axis=1), preds.argmax(axis=1)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "\n",
+    "with open('tokenizer.pickle', 'wb') as handle:\n",
+    "    pickle.dump(tokenizer, handle, protocol=pickle.HIGHEST_PROTOCOL)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "info = {\n",
+    "    'tokenizer':'tokenizer.pickle',\n",
+    "    'model':'reviews_lstm.hdf',\n",
+    "    'max_sequence':sequence_length,\n",
+    "    'max_words':max_words,\n",
+    "    'vocab_size':vocab_size\n",
+    "}\n",
+    "\n",
+    "import json\n",
+    "\n",
+    "with open('project_info.json', 'w') as outfile:\n",
+    "    json.dump(info, outfile)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.8991351 , 0.06033582, 0.03149451, 0.00485514, 0.00417933]],\n",
+       "      dtype=float32)"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import keras\n",
+    "model = keras.models.load_model(\"./scoring_service/models/\"+info['model'])\n",
+    "model.predict(X_train[0:1])"
    ]
   }
  ],
