--- a/service_demo.ipynb
+++ b/service_demo.ipynb
@@ -47,8 +47,8 @@
     }
    ],
    "source": [
-    "data = {'title':'Just okay, but pretty average', \n",
-    "        'review':'Not the best, there are better games to play.'}\n",
+    "data = {'title':\"There's better\", \n",
+    "        'review':'Not the best game, average over all compared to others, definitely better games out there to play.'}\n",
     "\n",
     "req = requests.post(\"http://127.0.0.1:80/score\", data=json.dumps(data), headers=headers)\n",
     "print(req.json())"
