Added new service.

--- a/service_demo.ipynb
+++ b/service_demo.ipynb
@@ -116,6 +116,48 @@
     "req = requests.post(\"http://127.0.0.1:80/score\", data=json.dumps(data), headers=headers)\n",
     "print(req.json())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'pos_neg': 'Negative', 'prob': '0.028711364'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = {'title':'Terrible App', \n",
+    "        'review':'This is by far the worst app I have ever played!!!!'}\n",
+    "\n",
+    "req = requests.post(\"http://127.0.0.1:80/score\", data=json.dumps(data), headers=headers)\n",
+    "print(req.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'pos_neg': 'Positive', 'prob': '0.98403925'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = {'title':'The best', \n",
+    "        'review':'By far the best game I have ever played.'}\n",
+    "\n",
+    "req = requests.post(\"http://127.0.0.1:80/score\", data=json.dumps(data), headers=headers)\n",
+    "print(req.json())"
+   ]
   }
  ],
  "metadata": {
